--- a/hw_1.ipynb
+++ b/hw_1.ipynb
@@ -135,8 +135,8 @@
     "    N = 150  ### for smoothness baby\n",
     "    L = 1.0\n",
     "    h = L / N\n",
-    "    #x = -L / 2 + h * np.arange(0, N) + h / 2\n",
-    "    x = np.linspace(0, 1, N)\n",
+    "    x = -L / 2 + h * np.arange(0, N) + h / 2\n",
+    "    #x = np.linspace(0, 1, N)\n",
     "    k = np.arange(1, N + 1) * np.pi / L\n",
     "    \n",
     "    # Given f1\n",
@@ -147,7 +147,7 @@
     "\n",
     "    # Initial condition functions\n",
     "    def H0(x):\n",
-    "        return np.exp(-200*((x-L/2)**2)/2)\n",
+    "        return np.exp(-100*x**2)\n",
     "\n",
     "    def Ht0(x):\n",
     "        return np.zeros_like(x)\n",
@@ -314,6 +314,42 @@
     "\n",
     "S_normalized = S / np.max(np.abs(S))\n",
     "Audio(S_normalized, rate=Samp_rate)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scipy.io.wavfile import write\n",
+    "\n",
+    "Pickup = 4\n",
+    "S = np.zeros(N_Time_Steps)\n",
+    "for i in range(N_Time_Steps):\n",
+    "        Vn1 = -(2 * np.pi * f1 * k)*dt*An + Vn\n",
+    "        An1 = dt*Vn1 + An\n",
+    "\n",
+    "        Vn = Vn1\n",
+    "        An = An1\n",
+    "\n",
+    "    # Calculate the actual wave from frequency data\n",
+    "        Hn = idst(An)\n",
+    "        S[n] = Hn[Pickup]\n",
+    "\n",
+    "# Play the sound\n",
+    "Samp_rate = int(len(S) / 1.0)\n",
+    "Audio(S, rate=Samp_rate)\n",
+    "\n",
+    "\n",
+    "S_normalized = S / np.max(np.abs(S))\n",
+    "Audio(S_normalized, rate=Samp_rate)\n",
+    "\n",
+    "# Scale and ensure data is in int16 range for WAV format\n",
+    "scaled_S = np.int16(S_normalized / np.max(np.abs(S_normalized)) * 32767)\n",
+    "\n",
+    "# Save to a WAV file\n",
+    "write(\"verlet.wav\", Samp_rate, scaled_S)\n"
    ]
   }
  ],
